Fix modal representation on small devices

--- a/css/modals.css
+++ b/css/modals.css
@@ -110,6 +110,8 @@
 .modal-body {
     margin-right: 30%;
     margin-left: 10%;
+    font-size: 16px;
+    text-align: justify;
 }
 
 .sep {
@@ -128,6 +130,20 @@
 
 /* @media section */
 
+@media(max-width: 1024px) {
+
+  /* tagging column */
+  .modal-body {
+      margin-right: 20%;
+      margin-left: -5%;
+  }
+
+  #exhibition-center {
+      margin-right: 20%;
+      margin-left: 10%;
+  }
+}
+
 @media(max-width: 991px) {
 
     /*general modal info*/
@@ -137,11 +153,21 @@
         top: 10vh;
     }
 
+    /*close button*/
+    .close {
+        margin-right: 30px;
+        margin-top: 5px;
+    }
+
     /*carousel slide*/
     .gallery {
         top: 20px;
         transform: none;
         margin-right: 15px;
+    }
+
+    .remove_left_margin {
+        margin-left: 0;
     }
 
     /* override default bootstrap indicators */
@@ -157,7 +183,13 @@
     /* tagging column */
     .modal-body {
         margin-right: 10%;
+        margin-left: 10%;
         margin-top: 20px;
+    }
+
+    #exhibition-center {
+        margin-right: 10%;
+        margin-left: 10%;
     }
 
     .sep {
@@ -169,7 +201,25 @@
 
     /*general modal info*/
     .modal-window {
-        height: 45vw;
+        height: 100vh;
+        top: 0;
+    }
+
+    /*carousel slide*/
+    .gallery {
+        top: 10px;
+    }
+
+    .gallery ul li span {
+        width: 14px;
+        height: 14px;
+    }
+
+    /*close button*/
+    .close {
+        font-size: 40px;
+        margin-right: 25px;
+        margin-top: 5px;
     }
 }
 
@@ -177,6 +227,6 @@
 
     /*general modal info*/
     .modal-window {
-        height: 80vw;
+        height: 100vh;
     }
 }
