--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -41,8 +41,8 @@ li,ul {
 
 .navbar-nav>li>a {
     border-radius: 0 0 3px 4px;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 18px;
+    padding-bottom: 18px;
 }
 
 nav.navbar-default {
